api_versioned_docs/version-12.1.2/avalonia/controls/documents/primitives/components/texteditorselectionflyout.mdx
---
title: 'TextEditorSelectionFlyout'
hide_title: true
slug: '/avalonia/controls/documents/primitives/components/texteditorselectionflyout'
uid: 'Avalonia.Controls.Documents.Primitives.Components.TextEditorSelectionFlyout'
commentId: 'T:Avalonia.Controls.Documents.Primitives.Components.TextEditorSelectionFlyout'
docset: 'avalonia-docs'
packageId: 'Avalonia.Controls.RichTextEditor'
assembly: 'Avalonia.Controls.RichTextEditor'
apiKind: 'Class'
generatedBy: 'dotnet-apiref'
namespace: 'Avalonia.Controls.Documents.Primitives.Components'
tfms:
  - 'net10.0'
---

import ApiRefPage from '@site/src/components/apiref/ApiRefPage';

<ApiRefPage>

<h1 className="apiref-page__title">TextEditorSelectionFlyout Class</h1>

## Definition

<div className="apiref-page__definition-meta">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Namespace:</span> <a href="./">Avalonia.Controls.Documents.Primitives.Components</a>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Assembly:</span> <code>Avalonia.Controls.RichTextEditor</code>
</div>
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Package:</span> <code>Avalonia.Controls.RichTextEditor</code>
</div>
</div>

<div className="apiref-page__lead">

Manages the lifecycle of the selection mini-bar ([Avalonia.Controls.Documents.Primitives.EditorSelectionFlyout](xref:Avalonia.Controls.Documents.Primitives.EditorSelectionFlyout)).

</div>

<div className="apiref-page__signature">

```csharp
public class TextEditorSelectionFlyout
```

</div>

<div className="apiref-page__relations">
<div className="apiref-page__meta-row">
<span className="apiref-page__meta-label">Inheritance:</span> TextViewComponentBase <span className="apiref-page__relation-separator">-&gt;</span> TextEditorSelectionFlyout
</div>
</div>

## Remarks

The mini-bar opens on pointer release when a non-empty selection exists,
and closes automatically when the selection becomes empty or the user
presses Escape. The right-click context menu is handled separately by
[Avalonia.Controls.Documents.Primitives.Components.TextViewContextMenu](xref:Avalonia.Controls.Documents.Primitives.Components.TextViewContextMenu).

## Constructors

| Name | Description |
| --- | --- |
| [TextEditorSelectionFlyout](#uid-a6d403cc06) | No summary available. |

<section className="apiref-page__member-entry">

<span id="uid-a6d403cc06"></span>

### TextEditorSelectionFlyout Constructor

```csharp
public TextEditorSelectionFlyout()
```

</section>

</ApiRefPage>

